2000-09-26  Lyndon Tremblay  <humasect@home.com>

	* Headers/Foundation/NSObject.h (CREATE_AUTORELEASE_POOL): Saves 1
	message call.
	(RECREATE_AUTORELEASE_POOL): Added to reuse existing variables.

2000-09-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURLHandle.m: ([-addClient:]) ensure that clients are only
	recorded once.
	* Documentation/gsdoc/NSURLHandle.gsdoc: fless out descriptions and
	add type and protocol information.

2000-09-24  Adam Fedor  <fedor@gnu.org>

	* configure.in: Check for rint in math library...

2000-09-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/NSData.h: Added URL methods.
	* Headers/gnustep/base/GSXML.h: Reorganized init methods in line with
	Manuels ideas but with naming consistent with other classes.
	* Source/NSData.m: Added URL methods.
	* Source/NSURL.m: First attempt (untested) at code to load data.
	tolerate URLs where the network part is missing and the '//' left out.
	* Source/GSXML.m: Reorganized init methods in line with
	Manuels ideas but with naming consistent with other classes.
	Correct methods for setting parser behavior for the object concerned
	rather than default behavior for all parsers.
	Support NSURL parsing.
	* Source/propList.h: Update for change in GSXMLParser API.
	* Documentation/gsdoc/GSXMLParser.gsdoc: update for new initialisation
	methods.
	* Source/NSArray.m: Put code in place to generate XML proplists
	* Source/NSDictionary.m: Put code in place to generate XML proplists
	* Source/GSCompatibility.m: Put code in place to generate XML proplists
	but disable it until working entity replacement is done.

2000-09-21  Adam Fedor  <fedor@gnu.org>

	* configure.in: Check for rint.
	* Source/GSCompatibility.m: Define rint if not available.

	* Source/NSData.m (readContentsOfFile): Remove incorrectly used
	variable (MINGW).
	* Source/NSFileManager.m (-removeFileAtPath:handler:): Use more
	direct check if path is a dir.
	(directoryContentsAtPath): Likewise.